# eeft_sched

./: .clang-tidy  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
include/: barrier.h  config.h  ipc.h  list.h  log.h  platform.h  power_management.h  processor.h  ring_buffer.h  sched.h  task_alloc.h  task_management.h  tests.h
include/lib/: barrier.h  list.h  log.h  math.h  platform_sem.h  ring_buffer.h
include/scheduler/: sched_core.h  sched_migration.h  sched_util.h
include/tests/: test_assert.h  test_core.h  test_log.h  test_runner.h  tests.h
src/: barrier.c  ipc.c  log.c  main.c  platform.c  power_management.c  processor.c  sched.c  task_management.c
src/lib/: barrier.c  log.c
src/scheduler/: sched_core.c  sched_migration.c  sched_util.c
src/tests/: test_runner.c
tests/: test_barrier.c  test_list.c  test_ring_buffer.c  test_task_management.c  tests.c
tools/: config_generator.py  log_parser.py  system_config_generator.py  task_allocator.py  task_generator.py  taskset_generator.py
