[project]
name = "eeft-tools"
version = "0.1.0"
description = "Analysis and visualization tools for the Energy-Efficient Fault-Tolerant Scheduler"
requires-python = ">=3.9"
authors = [{ name = "Ray" }]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "seaborn",
    "PyYAML"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tools"]
